# xmltreenav

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  bootstrap  configure  configure.ac  configure.in
.github/workflows/: msbuild.yml
doc/: HOWTO-Package-Debian.txt  Makefile.am  xmlTreeNav_en.html
doc/use/: Makefile.am  contents.hhc  help_en.html  xmltreenav.hhp
lib/: Makefile.am  Makefile.in
lib/iehtmlwin/: iehtmlwin.cpp  iehtmlwin.h
lib/wxactivex/: IEHtmlWin.cpp  IEHtmlWin.h  bundle.bat  default.doxygen  license.txt  makefile  makefile.gtk  notes.txt  readme.txt  resource.h  wxActiveXFrame.cpp  wxActiveXFrame.h  wxIE.aps  wxIE.dsp  wxIE.rc  wxIEApp.cpp  wxIEApp.h  wxIEFrm.cpp  wxIEFrm.h  wxactivex.cpp  wxactivex.h
lib/wxmisc/: ConfigDialog.cpp  ConfigDialog.h  Makefile.am  Makefile.in  wxUniCompat.cpp  wxUniCompat.h
lib/xmldiff/: Makefile  errors.h  lx2_diff.cpp  lx2_diff.h  lx2_ops.cpp  lx2_ops.h  lx2_parse.cpp  lx2_parse.h  lx2_str.h  lx2_util.cpp  lx2_util.h  xmldiff.h
po/: .cvsignore  Makevars  POTFILES.in  extra-strings.cpp  file_windows.txt  fr.mo  fr.po  it.mo  it.po  language_mo_build.bat  language_po_update.bat  language_vars.bat  po_build.bat  po_update.bat  xmlTreeNav.mo  xmlTreeNav.po  xmlTreeNav.pot
resources/: Makefile.am  Makefile.in  build_xpm.sh  dlg_diff.wxg  resource.h  resource.inc  resources.aps  resources.rc
resources/treeicons/: Makefile.am  Makefile.in  convert_xpm.bat  treeicons.xpm  xpm_ti_added.xpm  xpm_ti_attribute.xpm  xpm_ti_below.xpm  xpm_ti_comment.xpm  xpm_ti_element.xpm  xpm_ti_modified.xpm  xpm_ti_removed.xpm  xpm_ti_root.xpm  xpm_ti_text.xpm  xpm_ti_unknown.xpm
resources/xpm/: Makefile.am  Makefile.in  xpm_arrow_left.xpm  xpm_arrow_right.xpm  xpm_copy.xpm  xpm_crop.xpm  xpm_cut.xpm  xpm_explorer.xpm  xpm_fullscrn.xpm  xpm_help.xpm  xpm_history_folder.xpm  xpm_light_green.xpm  xpm_light_grey.xpm  xpm_light_red.xpm  xpm_new.xpm  xpm_paste.xpm  xpm_preview.xpm  xpm_print.xpm  xpm_rotate_left.xpm  xpm_rotate_right.xpm  xpm_save.xpm  xpm_undo.xpm  xpm_xmltreenav.xpm  xpm_xmltreenav2.xpm  xpm_xmltreenav3.xpm
src/: ConfigDialog.cpp  ConfigDialog.h  Makefile.am  Makefile.in  xtnApp.cpp  xtnApp.h  xtnDialogDiffCurrent.cpp  xtnDialogDiffCurrent.h  xtnDialogDiffDual.cpp  xtnDialogDiffDual.h  xtnFrame.cpp  xtnFrame.h  xtnPrecomp.cpp  xtnPrecomp.h  xtnXmlTree.cpp  xtnXmlTree.h
