AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(xmlTreeNav,0.3.0)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl wxWindows -----
AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.3.2, wxWin=1)
        if test "$wxWin" != 1; then
        AC_MSG_ERROR([
                wxWindows must be installed on your system.

                Please check that wx-config is in path, the directory
                where wxWindows libraries are installed (returned by
                'wx-config --libs' or 'wx-config --static --libs' command)
                is in LD_LIBRARY_PATH or equivalent variable and
                wxWindows version is 2.3.2 or above.
                ])
        fi
dnl --------------

dnl libxml
AM_PATH_XML2( 2.0.0, , AC_MSG_ERROR(libxml2 must be installed.) )
AC_CHECK_LIB(xslt, main, , AC_MSG_ERROR(libxslt must be installed.))
AC_CHECK_LIB(exslt, main, , AC_MSG_ERROR(libexslt must be installed.))

dnl Internationalization
AM_GNU_GETTEXT([external])
AM_GNU_GETTEXT_VERSION([0.14.4])

dnl DEBUG="-g "
LIBS="$DEBUG $LIBS $WX_LIBS $XML_LIBS"
CXXFLAGS="$DEBUG $CXXFLAGS $WX_CXXFLAGS $XML_CXXFLAGS"
CPPFLAGS="$DEBUG $CPPFLAGS $WX_CPPFLAGS $XML_CPPFLAGS"
CFLAGS="$DEBUG $CFLAGS $WX_CFLAGS $XML_CFLAGS"

AC_CONFIG_FILES([ m4/Makefile \
    Makefile \
    src/Makefile \
    lib/Makefile \
    lib/wxmisc/Makefile \
    po/Makefile.in \
    resources/Makefile \
    resources/xpm/Makefile \
    resources/treeicons/Makefile \
    ])
AC_OUTPUT
