SUBDIRS=use

EXTRA_DIST = \
        HOWTO-Package-Debian.txt 
        
confdir = $(pkgdatadir)
conf_DATA = \
    ../bin/config.xml \
    ../bin/config.xml \
    ../bin/xslt/filter-added.xsl \
    ../bin/xslt/filter-added-removed.xsl \
    ../bin/xslt/filter-added-removed-or-equal.xsl \
    ../bin/xslt/filter-removed.xsl \
    ../bin/xslt/helper-default-filter.xsl \
    ../bin/xslt/helper-status-icons.xsl \
    ../bin/xslt/html-lists.xsl
