bin_PROGRAMS=RPhoto
RPhoto_LDADD= ../lib/wxVillaLib/libwxVillaLib.a ../lib/wxFix/libwxFix.a
RPhoto_SOURCES= \
	RatioPrecomp.cpp \
	RatioPrecomp.h \
	RatioFrame.cpp \
	RatioFrame.h \
	RPhoto.cpp \
	RPhoto.h \
	RectTracker.cpp \
	RectTracker.h \
	RatioImageBox.cpp \
	RatioImageBox.h \
	ConfigDialog.cpp \
	ConfigDialog.h
	

# Pre-compiled headers
# g++ $(wx-config --cppflags) -o RatioPrecomp.h.gch -c RatioPrecomp.cpp
