bin_PROGRAMS=xmltreenav
xmltreenav_LDADD= ../lib/wxmisc/libwxmisc.a -lxmldiff -L../../libxmldiff/src
xmltreenav_SOURCES= \
    Makefile.am \
    Makefile.in \
    xtnApp.cpp \
    xtnApp.h \
    xtnDialogDiffCurrent.cpp \
    xtnDialogDiffCurrent.h \
    xtnDialogDiffDual.cpp \
    xtnDialogDiffDual.h \
    xtnFrame.cpp \
    xtnFrame.h \
    xtnPrecomp.cpp \
    xtnPrecomp.h \
    xtnXmlTree.cpp \
    xtnXmlTree.h

INCLUDES=-I../lib/

