EXTRA_DIST= \
      convert_xpm.bat \
      treeicons.bmp \
      treeicons.xpm \
      xpm_ti_added.xpm \
      xpm_ti_attribute.xpm \
      xpm_ti_below.xpm \
      xpm_ti_comment.xpm \
      xpm_ti_element.xpm \
      xpm_ti_modified.xpm \
      xpm_ti_removed.xpm \
      xpm_ti_root.xpm \
      xpm_ti_text.xpm \
      xpm_ti_unknown.xpm
