EXTRA_DIST= \
     xpm_arrow_left.xpm \
     xpm_arrow_right.xpm \
     xpm_copy.xpm \
     xpm_crop.xpm \
     xpm_cut.xpm \
     xpm_explorer.xpm \
     xpm_fullscrn.xpm \
     xpm_help.xpm \
     xpm_landorpo.xpm \
     xpm_landscap.xpm \
     xpm_new.xpm \
     xpm_open.xpm \
     xpm_page.xpm \
     xpm_paste.xpm \
     xpm_portrait.xpm \
     xpm_preview.xpm \
     xpm_print.xpm \
     xpm_rotate_left.xpm \
     xpm_rotate_right.xpm \
     xpm_save.xpm \
     xpm_undo.xpm \
     xpm_FilesPhoto.xpm \
     xpm_light_green.xpm \
     xpm_light_red.xpm \
     xpm_light_grey.xpm
	 

